--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -11,8 +11,10 @@ jobs:
 
     env:
       NODE_OPTIONS: --max-old-space-size=6144
+      JAVA_HOME: /usr/lib/jvm/adoptopenjdk-17-hotspot
 
     steps:
+      # ---------- CHECKOUT ----------
       - uses: actions/checkout@v4
 
       # ---------- NODE ----------
@@ -20,7 +22,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+          cache: 'npm'
 
       - name: Clean node modules
         run: |
@@ -37,7 +39,7 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      # ---------- ANDROID ----------
+      # ---------- ANDROID SDK ----------
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
@@ -66,6 +68,15 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x android/gradlew
 
+      - name: Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper/
+          key: gradle-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+          restore-keys: gradle-
+
       - name: Clean Android
         working-directory: android
         run: ./gradlew clean
@@ -75,6 +86,9 @@ jobs:
         run: ./gradlew assembleRelease --no-daemon --stacktrace
 
       # ---------- OUTPUT ----------
+      - name: Ensure build folder exists
+        run: mkdir -p android/app/build/outputs/apk/release
+
       - name: List APK
         run: find android/app/build/outputs -name "*.apk"
 
