--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -24,13 +24,8 @@ jobs:
           node-version: 20
           cache: 'npm'
 
-      - name: Clean node modules
-        run: |
-          rm -rf node_modules package-lock.json
-
-      - name: Install dependencies (React Native safe)
-        run: |
-          npm install --legacy-peer-deps --no-audit --no-fund --verbose
+      - name: Install dependencies
+        run: npm install --legacy-peer-deps --no-audit --no-fund --verbose
 
       # ---------- JAVA ----------
       - name: Setup Java
@@ -86,12 +81,6 @@ jobs:
         run: ./gradlew assembleRelease --no-daemon --stacktrace
 
       # ---------- OUTPUT ----------
-      - name: Ensure build folder exists
-        run: mkdir -p android/app/build/outputs/apk/release
-
-      - name: List APK
-        run: find android/app/build/outputs -name "*.apk"
-
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
